[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rust_demangler"
version = "0.1.0"
description = "A package for demangling Rust symbols, written in Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ret2happy"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/ret2happy/rust-demangler"
Repository = "https://github.com/ret2happy/rust-demangler.git"

[tool.hatch.build.targets.wheel]
packages = ["demangler"]
